# pbdXGB

./: .Rbuildignore  .travis.yml  ChangeLog  DESCRIPTION  NAMESPACE  README.md  appveyor.yml  cleanup  configure  configure.ac
R/: callbacks.R  rabit.R  utils.R  xgb.Booster.R  xgb.DMatrix.R  xgb.train.R  xgboost.R  zzz.r.in
R/windows/: zzz.r
man/: cb.gblinear.history.Rd  dim.xgb.DMatrix.Rd  dimnames.xgb.DMatrix.Rd  getinfo.Rd  predict.xgb.Booster.Rd  print.xgb.Booster.Rd  print.xgb.DMatrix.Rd  setinfo.Rd  slice.xgb.DMatrix.Rd  xgb.Booster.complete.Rd  xgb.DMatrix.Rd  xgb.attr.Rd  xgb.parameters.Rd  xgb.rabit.Rd  xgb.train.Rd
src/: Makevars.in  Makevars.win  init.c  rabit.R  xgboost_rabit.cc
src/rabit/include/rabit/: c_api.h  rabit.h
src/rabit/include/rabit/internal/: engine.h  rabit-inl.h  rabit-inl_mpicc.h
src/rabit/src/: allreduce_base.h  allreduce_robust.cc  allreduce_robust.h  engine.cc  engine_mpi.cc  engine_mpicc.cc
